[fix] Scale on mobile devices

--- a/app/index.css
+++ b/app/index.css
@@ -168,7 +168,7 @@ select {
 }
 
 .mobile #blockly {
-  min-height: 35vh;
+  min-height: 45vh;
 }
 
 /* 'Look' icon */
